# RAG_GraphRAG_HelpDesk_Backend

./: .gitignore  READ.md  README.md  conftest.py  init_db.py  packages.sh  packages.txt  pyproject.toml  pyrightconfig.json  pytest.ini  script.sh  test_main.http  test_output.txt
config/: redis_index.yaml
evaluation/: BENCHMARK_STATUS.md  README.md
evaluation/dataset/: benchmark_questions.json
evaluation/results/: accuracy_detail.csv  accuracy_summary.csv  chunk_grid_benchmark.csv  ensemble_best.json  ensemble_tuning.csv  profile_report.json  profile_report.md  raw.json  summary.csv  summary_table.md  summary_table.tex
evaluation/scripts/: README.md  benchmark_chunk_grid.py  benchmark_ensemble_retriever.py  compare_accuracy.py  generate_plots.py  generate_summary_table.py  profile_performance.py  run_benchmark.py
src/: main.py
src/Domain/: base_entities.py  compare_entities.py  history_entities.py  test_compare_entities.py
src/Features/AI_API/: AI_Controller.py  AI_Service.py
src/Features/AgentAPI/: VectorDbRepo.py
src/Features/AuthAPI/: AccountDTO.py  AccountRepository.py  AuthController.py  AuthService.py  JWTProvider.py
src/Features/ConversationAPI/: ConversationController.py  ConversationDTO.py  ConversationRepository.py  ConversationService.py
src/Features/DeparmentAPI/: DeparmentController.py  (+3 more)
src/SharedKernel/: AIConfig.py  Utils.py  VectorStoreFactory.py
src/tests/: test_compare_entities.py  test_memory_repository.py  test_process.py  test_prompt.py
static/: backup.txt  test.py
static/faiss_index/: index.faiss  index.pkl
ui/: app.py
(+97 files in other folders)
