[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AIHelpDesk"
version = "0.1.0"

[tool.setuptools]
# Chỉ định rằng tất cả code nằm trong thư mục src
package-dir = {"" = "src"}

# Tự động tìm các folder có file __init__.py bên trong src
[tool.setuptools.packages.find]
where = ["src"]